Update README with installation instructions